# NGTU_3

  LR1/: Lab1  program
  LR1/include/include/: FullBinaryTree.h  Massiv.h  Queue.h  Steck.h
  LR1/src/src/: List_1.cpp  Steck.cpp
LAB4/: 1  task_1.cpp  task_2.cpp  task_3.cpp
LR1/  LR1/: Makefile  README.md  Test  program  tes
LR1/  LR1/include/include/: List_1.h  List_2.h
LR1/  LR1/src/src/: FullBinaryTree.cpp  List_2.cpp  Massiv.cpp  Queue.cpp  Steck.go  main.cpp
LR3/Realization_C++/: CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  DynamicArray.cpp  DynamicArray.h  FullBinaryTree.cpp  FullBinaryTree.h  Hash.cpp  Hash.h  Queue.cpp  Queue.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Stack.cpp  Stack.h  main.cpp  test_coverage.cpp  test_doubly_linked_list.cpp  test_dynamic_array.cpp  test_full_binary_tree.cpp  test_hash.cpp  test_queue.cpp  test_singly_linked_list.cpp  test_stack.cpp
LR3/Realization_GO/: doubly_linked_list.go  dynamic_array_test.go  full_binary_tree_test.go  main_test.go  queue_test.go  singly_linked_list.go  stack.go
LR4/: 1  2  3  task_1.cpp
LR5/: cave.cpp  cave.h  cave_generator  main.cpp
Realization_GO/: coverage.html  coverage.out  doubly_linked_list_test.go  dynamic_array.go  full_binary_tree.go  go.mod  hash.go  hash_test.go  main.go  queue.go  singly_linked_list_test.go  stack_test.go
sql-injection-detector/: CMakeLists.txt  Dockerfile  README.md  detector_real.desktop  docker-compose.yml  main_real.cpp  sqli_attacks.csv  supervisord.conf
sql-injection-detector/database/: scans.db  sqli_attacks.csv
sql-injection-detector/src/: main_real.cpp
